backpack/src/snapshots/custom_config@[]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "hygen",
    Ok(
        (
            my.gitlab.com,
            Location {
                url: "https://my.gitlab.com/hygen",
                domain: "my.gitlab.com",
                path: "/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
