backpack/src/snapshots/custom_config@[]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "jondot/hygen",
    Ok(
        (
            my.gitlab.com,
            Location {
                url: "https://my.gitlab.com/jondot/hygen",
                domain: "my.gitlab.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
