backpack/src/snapshots/custom_config@[]-[rust-starter]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "rust-starter",
    Ok(
        (
            my.gitlab.com,
            Location {
                url: "https://my.gitlab.com/jondot/rust-starter",
                domain: "my.gitlab.com",
                path: "/jondot/rust-starter",
                project: "rust-starter",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: true,
            },
            None,
        ),
    ),
)
