backpack/src/snapshots/custom_config@[gh]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "gh:hygen",
    Ok(
        (
            beta.github.com/my-org,
            Location {
                url: "https://beta.github.com/my-org/hygen",
                domain: "beta.github.com",
                path: "/my-org/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
            None,
        ),
    ),
)
