backpack/src/snapshots/custom_config@[gh]-[rust-starter]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "gh:rust-starter",
    Ok(
        (
            beta.github.com/my-org,
            Location {
                url: "https://beta.github.com/my-org/rust-starter",
                domain: "beta.github.com",
                path: "/my-org/rust-starter",
                project: "rust-starter",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
