backpack/src/snapshots/custom_config@[ghe]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "ghe:hygen",
    Ok(
        (
            github.enterprise.example.com,
            Location {
                url: "https://github.enterprise.example.com/hygen",
                domain: "github.enterprise.example.com",
                path: "/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
            None,
        ),
    ),
)
