backpack/src/snapshots/custom_config@[ghe]-[rust-starter]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "ghe:rust-starter",
    Err(
        "cannot find a project in: /rust-starter",
    ),
)
