backpack/src/snapshots/custom_config@[gl]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, &config))"
---
(
    "gl:hygen",
    Err(
        "cannot find a project in: /hygen",
    ),
)
