backpack/src/snapshots/custom_config@[gl]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "gl:jondot/hygen",
    Ok(
        (
            gitlab.com,
            Location {
                url: "https://gitlab.com/jondot/hygen",
                domain: "gitlab.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
