backpack/src/snapshots/custom_config@[gl]-[rust-starter]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "gl:rust-starter",
    Err(
        "cannot find a project in: /rust-starter",
    ),
)
